# rag-code-search-finetuning-study

./: .gitignore  CONFIG_README.md  README.md  analyze_deletion_results.py  delete_functions.py  evaluate.py  evaluate_all_modes.py  finetune.py  generate_function_summaries.py  gpu_monitor.py  load_finetuned_model.py  load_summaries_into_rag.py  rag_chat.py  rag_system.py  reindex.py  requirements.txt  select_deletion_candidates.py  smart_summary_selector.py  test_questions.json  test_questions_category2.json  test_questions_rq2.json  test_questions_v2.json  test_questions_v3.json
codebase/: package.json
codebase/client/: index.html
codebase/client/scripts/: admin.js  debug.js  docs.js  esp32_control.js  index.js  login.js  register.js
codebase/client/styles/: auth.css
codebase/client/templates/: device_detail.html  docs.html  login.html
codebase/docs/frontend/: README.md  components.md
codebase/src/backend/: auth.rs  database.rs  debug_logger.rs  device_store.rs  esp32_connection.rs  esp32_discovery.rs  esp32_manager.rs  esp32_types.rs  events.rs  file_utils.rs  lib.rs  main.rs  mdns_discovery.rs  mdns_server.rs  uart_connection.rs  websocket.rs
codebase_enriched/: package-lock.json
codebase_enriched/client/: app.js
codebase_enriched/client/scripts/: admin.js  index.js  (+1 more)
codebase_enriched_rq2/: .gitignore  Cargo.toml  Dockerfile  README.md
codebase_enriched_rq2/client/: app.js  index.css
codebase_enriched_rq2/client/scripts/: debug.js  docs.js  esp32_control.js  login.js
codebase_enriched_rq2/client/styles/: admin.css  index.css  settings.css
codebase_enriched_rq2/client/templates/: admin.html  esp32_control.html  settings.html
codebase_enriched_rq2/data/: initial_users.json
codebase_enriched_rq2/docs/: README.md  projekt-uebersicht.md
codebase_enriched_rq2/docs/backend/: modules.md
codebase_enriched_rq2/src/backend/: auth.rs  database.rs  device_store.rs  esp32_manager.rs  esp32_types.rs  events.rs  main.rs  mdns_discovery.rs  uart_connection.rs  websocket.rs
finetuned_model/: adapter_config.json  tokenizer.json  tokenizer_config.json  training_metadata.json
finetuned_model/checkpoint-256/: scheduler.pt  trainer_state.json
finetuned_model/checkpoint-384/: README.md  scheduler.pt  trainer_state.json
(+16 files in other folders)
