[package]
name = "drawing-app-backend"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "drawing-app-backend"
path = "src/backend/main.rs"

[lib]
name = "drawing_app_backend"
path = "src/backend/lib.rs"


[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime = "0.3"
mime_guess = "2.0"
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
dotenvy = "0.15"
pulldown-cmark = "0.9"
regex = "1.0"
thiserror = "1.0"
mdns-sd = "0.11"
socket2 = "0.5"
tokio-serial = "5.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
futures-util = "0.3"


[profile.dev]
opt-level = 0          # Keine Optimierung für schnellere Kompilierung
debug = true           # Vollständige Debug-Informationen
overflow-checks = true # Runtime-Checks für Integer-Overflow
lto = false           # Kein Link-Time-Optimization für schnellere Builds
incremental = true    # Inkrementelle Kompilierung aktivieren
codegen-units = 256   # Parallele Kompilierung

[profile.release]
opt-level = 3         # Maximale Optimierung
debug = false         # Keine Debug-Informationen
lto = true           # Link-Time-Optimization für bessere Performance
codegen-units = 1    # Bessere Optimierung durch weniger Code-Units
panic = "abort"      # Kleinere Binaries durch abort statt unwind

# Debug-freundliches Development Profile
[profile.dev-debug]
inherits = "dev"
debug = 2            # Maximale Debug-Informationen
opt-level = 1        # Leichte Optimierung für bessere Performance